hphp/hack/test/typecheck/this_param.php.like_types.exp
File "this_param.php", line 23, characters 16-19:
Invalid argument (Typing[4110])
File "this_param.php", line 23, characters 5-9:
Expected ~this
File "this_param.php", line 21, characters 24-26:
But got <expr#1>
File "this_param.php", line 23, characters 16-19:
  where '<expr#1>' is a reference to this expression
